--- a/shmem/unix/mm/mm-config.1
+++ b/shmem/unix/mm/mm-config.1
@@ -1,11 +1,11 @@
 .rn '' }`
-''' $RCSfile: mm-config.1,v $$Revision: 1.1 $$Date: 1999/08/17 15:59:45 $
+''' $RCSfile: mm-config.1,v $$Revision: 1.2 $$Date: 1999/09/27 07:42:06 $
 '''
 ''' $Log: mm-config.1,v $
-''' Revision 1.1  1999/08/17 15:59:45  rbb
-''' Initial revision
+''' Revision 1.2  1999/09/27 07:42:06  rse
+''' Update the MM version APR contains to a more recent one.
 '''
-''' Revision 1.2  1999/03/28 11:45:32  rse
+''' Revision 1.7  1999/09/06 11:32:17  rse
 ''' *** empty log message ***
 '''
 '''
@@ -99,7 +99,7 @@
 .nr % 0
 .rr F
 .\}
-.TH mm-config 3 "28-Mar-1999" "MM 1.0.0" "Shared Memory Library"
+.TH MM-CONFIG 1 "06-Sep-1999" "MM 1.0.11" "Shared Memory Library"
 .UC
 .if n .hy 0
 .if n .na
@@ -196,7 +196,7 @@
 .SH "NAME"
 \fBmm-config\fR \- MM library configuration/build utility
 .SH "VERSION"
-MM 1.0.0 (28-Mar-1999)
+MM 1.0.11 (06-Sep-1999)
 .SH "SYNOPSIS"
 \fBmm-config\fR 
 [\fB--help\fR]
@@ -252,7 +252,7 @@ applications \f(CWMakefile\fR.
 .Ve
 
 .rn }` ''
-.IX Title "mm-config 3"
+.IX Title "MM-CONFIG 1"
 .IX Name "B<mm-config> - MM library configuration/build utility"
 
 .IX Header "NAME"
